# result-cpp

./: .gitignore  BUILD.bazel  CMakeLists.txt  Makefile  README.md  gcovr.sh
.github/workflows/: clang_format.yml  test.yml  test_coverage.yml
include/result/: macros.h  macros_impl.h  result.h  result_or.h
include/result/internal/: visit_external_error_code_to_str.h
include/result/types_check/: common.h  has_code.h  has_error_code_to_str.h  has_message.h  has_value.h  is_result.h  is_result_or.h
test/: CMakeLists.txt  custom_result.h  hello_world_benchmark.cc  hello_world_test.cc  result_benchmark.cc  result_test.cc  types_check_test.cc
test/custom_result/: custom_another_result.h  custom_result.h
